--- a/app/src/main/res/color/broken_sites_dropdown_selector.xml
+++ b/app/src/main/res/color/broken_sites_dropdown_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2019 DuckDuckGo
+  ~ Copyright (c) 2020 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,15 +14,9 @@
   ~ limitations under the License.
   -->
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.brokensite.BrokenSiteActivity">
-
-    <include layout="@layout/include_toolbar" />
-
-    <include layout="@layout/content_broken_sites" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="?attr/brokenSiteOutlinedColor" android:state_enabled="true" />
+    <item android:color="?attr/brokenSiteOutlinedColor" android:state_hovered="true" />
+    <item android:color="?attr/brokenSiteOutlinedColor" android:state_focused="true" />
+    <item android:color="?attr/brokenSiteOutlinedColor" />
+</selector>
