--- a/app/src/main/res/drawable/ic_down_arrow.xml
+++ b/app/src/main/res/drawable/ic_down_arrow.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2019 DuckDuckGo
+<!--
+  ~ Copyright (c) 2020 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,15 +14,12 @@
   ~ limitations under the License.
   -->
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.brokensite.BrokenSiteActivity">
-
-    <include layout="@layout/include_toolbar" />
-
-    <include layout="@layout/content_broken_sites" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
-
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="10dp"
+    android:height="5dp"
+    android:viewportWidth="10"
+    android:viewportHeight="5">
+    <path
+        android:fillColor="?attr/brokenSiteOutlinedColor"
+        android:pathData="M0,0L5,5L10,0L0,0Z" />
+</vector>
