--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -60,8 +60,8 @@
     <string name="hideTipsButton">Hide tips forever</string>
 
     <!-- Sticky Search Prompt Notification -->
-    <string name="stickySearchPromptNotificationTitle">Enable DuckDuckGo Search notification?</string>
+    <string name="stickySearchPromptNotificationTitle">Enable DuckDuckGo Quick Search?</string>
     <string name="stickySearchNotification">Sticky Search</string>
-    <string name="stickySearchNotificationText">Show Silent Search Notification</string>
+    <string name="stickySearchNotificationText">Show Quick Search in notifications</string>
 
 </resources>
