--- a/app/src/main/res/layout/activity_system_search.xml
+++ b/app/src/main/res/layout/activity_system_search.xml
@@ -67,7 +67,7 @@
                     android:layout_marginEnd="16dp"
                     android:background="@android:color/transparent"
                     android:fontFamily="sans-serif-medium"
-                    android:hint="@string/omnibarInputHint"
+                    android:hint="@string/systemSearchOmnibarInputHint"
                     android:imeOptions="flagNoExtractUi|actionGo|flagNoPersonalizedLearning"
                     android:inputType="textUri|textNoSuggestions"
                     android:maxLines="1"
@@ -107,19 +107,20 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/results"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:elevation="4dp"
+        android:elevation="@dimen/systemSearchResultsElevation"
         android:paddingBottom="4dp"
-        android:id="@+id/results"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/resultsContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:backgroundTint="?attr/colorPrimary"
+            android:clipToPadding="false"
             android:elevation="4dp">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -142,7 +143,7 @@
                 android:paddingBottom="2dp"
                 android:text="@string/systemSearchDeviceAppLabel"
                 android:textColor="@color/grayish"
-                android:textSize="13dp"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/autocompleteSuggestions"
@@ -157,6 +158,8 @@
                 app:layout_constraintTop_toBottomOf="@id/deviceLabel"
                 tools:itemCount="4"
                 tools:listitem="@layout/item_device_app_suggestion" />
+
+            <include layout="@layout/include_system_search_onboarding" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
