--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -63,5 +63,7 @@
     <string name="stickySearchPromptNotificationTitle">Enable DuckDuckGo Quick Search?</string>
     <string name="stickySearchNotification">Sticky Search</string>
     <string name="stickySearchNotificationText">Quick Search in Notifications</string>
+    <string name="stickySearchPromptKeep">Keep</string>
+    <string name="stickySearchPromptRemove">Remove</string>
 
 </resources>
