--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -66,6 +66,8 @@
         <item name="daxDialogSecondaryButtonRippleColor">@color/white</item>
         <item name="brokenSiteSelectionTextColor">@color/white</item>
         <item name="brokenSiteOutlinedColor">@color/grayish</item>
+        <item name="ddgButtonDisabledBackgroundColor">@color/greyishBrownTwo</item>
+        <item name="ddgButtonDisabledTextColor">@color/warGreyTwo</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/grayish</item>
         <item name="feedbackListItemBackgroundColor">@color/almostBlack</item>
@@ -128,6 +130,8 @@
         <item name="daxDialogSecondaryButtonRippleColor">@color/subtleGrayTwo</item>
         <item name="brokenSiteSelectionTextColor">@color/almostBlack</item>
         <item name="brokenSiteOutlinedColor">@color/grayishTwo</item>
+        <item name="ddgButtonDisabledBackgroundColor">@color/subtleGrayTwo</item>
+        <item name="ddgButtonDisabledTextColor">@color/white</item>
 
         <item name="feedbackAnonymousFeedbackLabelColor">@color/warmerGray</item>
         <item name="feedbackListItemBackgroundColor">@color/whiteFive</item>
