--- a/app/src/main/res/layout-land/content_broken_sites.xml
+++ b/app/src/main/res/layout-land/content_broken_sites.xml
@@ -30,10 +30,10 @@
 
         <ImageView
             android:id="@+id/bicycleImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="95dp"
+            android:layout_marginTop="8dp"
             android:importantForAccessibility="no"
             android:src="@drawable/broken_bicycle"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +43,10 @@
             android:id="@+id/noteText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="45dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="70dp"
-            android:gravity="center"
+            android:layout_marginEnd="170dp"
+            android:gravity="start"
             android:lineSpacingExtra="4sp"
             android:text="@string/brokenSiteDescription"
             android:textColor="?attr/normalTextColor"
@@ -61,17 +61,17 @@
             android:layout_height="12dp"
             android:layout_marginTop="26dp"
             android:layout_marginEnd="18dp"
-            app:layout_constraintEnd_toEndOf="@+id/tetInputLayout"
-            app:layout_constraintTop_toTopOf="@id/tetInputLayout"
+            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+            app:layout_constraintTop_toTopOf="@id/textInputLayout"
             app:srcCompat="@drawable/ic_down_arrow" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tetInputLayout"
+            android:id="@+id/textInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="25dp"
             android:hint="@string/brokenSitesCategoriesHint"
             android:textColorHint="?attr/brokenSiteOutlinedColor"
@@ -98,22 +98,20 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/submitButton"
+            style="@style/DDGButton"
             android:layout_width="0dp"
-            android:layout_height="56dp"
+            android:layout_height="70dp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="30dp"
-            android:background="@drawable/button_contained_bg"
-            android:foreground="?attr/selectableItemBackground"
             android:text="@string/brokenSiteSubmitButton"
-            android:textColor="@color/white"
-            android:textSize="@dimen/modalCardMajorButtonTextSize"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tetInputLayout" />
+            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
