--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -325,11 +325,16 @@
         <item name="android:layout_marginTop">9dp</item>
     </style>
 
-    <style name="DDGButton" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
+    <style name="DDGButton" parent="@style/Widget.MaterialComponents.Button">
         <item name="android:backgroundTint">@color/material_button_background</item>
         <item name="android:textColor">@color/material_button_text</item>
         <item name="rippleColor">?attr/daxDialogSecondaryButtonRippleColor</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:textAppearance">@style/DDGTextAppearance</item>
+    </style>
+
+    <style name="DDGTextAppearance" parent="@style/TextAppearance.MaterialComponents.Button">
+        <item name="android:letterSpacing">0.0</item>
     </style>
 
     <style name="DaxDialogButton" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
