incorporating feedbacks and following code conventions

--- a/app/src/main/res/layout/download_confirmation.xml
+++ b/app/src/main/res/layout/download_confirmation.xml
@@ -51,14 +51,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:drawableStart="@drawable/ic_open_24dp"
+            android:drawableStart="@drawable/ic_open_brownish_24dp"
             android:drawablePadding="24dp"
             android:fontFamily="sans-serif"
             android:paddingStart="24dp"
             android:paddingTop="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="17dp"
-            android:text="@string/open_with"
+            android:text="@string/downloadConfirmationOpenFileText"
             android:textColor="@color/brownishGray"
             android:textSize="16sp"
             android:textStyle="normal"
@@ -69,14 +69,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:drawableStart="@drawable/ic_replace_24dp"
+            android:drawableStart="@drawable/ic_replace_brownish_24dp"
             android:drawablePadding="24dp"
             android:fontFamily="sans-serif"
             android:paddingStart="24dp"
             android:paddingTop="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="17dp"
-            android:text="@string/replace"
+            android:text="@string/downloadConfirmationReplaceOldFileText"
             android:textColor="@color/brownishGray"
             android:textSize="16sp"
             android:textStyle="normal"
@@ -87,14 +87,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:drawableStart="@drawable/ic_file_24dp"
+            android:drawableStart="@drawable/ic_file_brownish_24dp"
             android:drawablePadding="24dp"
             android:fontFamily="sans-serif"
             android:paddingStart="24dp"
             android:paddingTop="24dp"
             android:paddingEnd="24dp"
             android:paddingBottom="17dp"
-            android:text="@string/fireContinue"
+            android:text="@string/downloadConfirmationContinue"
             android:textColor="@color/brownishGray"
             android:textSize="16sp"
             android:textStyle="normal" />
@@ -104,7 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:drawableStart="@drawable/ic_cancel_24dp"
+            android:drawableStart="@drawable/ic_cancel_brownish_24dp"
             android:drawablePadding="24dp"
             android:fontFamily="sans-serif"
             android:paddingStart="24dp"
