--- a/app/src/main/res/drawable/ic_keepboth_brownish_24dp.xml
+++ b/app/src/main/res/drawable/ic_keepboth_brownish_24dp.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M18,19H6c-0.55,0 -1,-0.45 -1,-1V6c0,-0.55 0.45,-1 1,-1h5c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1H5c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2v-6c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v5c0,0.55 -0.45,1 -1,1zM14,4c0,0.55 0.45,1 1,1h2.59l-9.13,9.13c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.39 1.02,0.39 1.41,0L19,6.41V9c0,0.55 0.45,1 1,1s1,-0.45 1,-1V3h-6c-0.55,0 -1,0.45 -1,1z"/>
+        android:fillColor="@color/brownishGray"
+        android:pathData="M14.59,2.59c-0.38,-0.38 -0.89,-0.59 -1.42,-0.59L6,2c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.89,2 1.99,2L18,22c1.1,0 2,-0.9 2,-2L20,8.83c0,-0.53 -0.21,-1.04 -0.59,-1.41l-4.82,-4.83zM15,16h-2v2c0,0.55 -0.45,1 -1,1s-1,-0.45 -1,-1v-2L9,16c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h2v-2c0,-0.55 0.45,-1 1,-1s1,0.45 1,1v2h2c0.55,0 1,0.45 1,1s-0.45,1 -1,1zM13,8L13,3.5L18.5,9L14,9c-0.55,0 -1,-0.45 -1,-1z"/>
 </vector>
