changed notification channel to search an importance high so we always see the full notification

--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -45,5 +45,6 @@
     <string name="stickySearchNotificationText">Quick Search in Notifications</string>
     <string name="stickySearchPromptKeep">Keep</string>
     <string name="stickySearchPromptRemove">Remove</string>
+    <string name="notificationChannelSearch">Search</string>
 
 </resources>
