--- a/app/src/main/res/color/broken_sites_button_text.xml
+++ b/app/src/main/res/color/broken_sites_button_text.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2020 DuckDuckGo
   ~
@@ -15,14 +16,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <style name="DDGButton" parent="@style/Widget.MaterialComponents.Button">
-        <item name="backgroundTint">@color/material_button_background</item>
-        <item name="android:colorButtonNormal">@color/grayish</item>
-        <item name="android:colorAccent">@color/cornflowerBlue</item>
-        <item name="android:textColor">@color/material_button_text</item>
-        <item name="rippleColor">?attr/daxDialogSecondaryButtonRippleColor</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textAppearance">@style/DDGTextAppearance</item>
-    </style>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="?attr/brokenSitesButtonDisabledTextColor" android:state_enabled="false" />
+    <item android:color="@color/white" />
+</selector>
