Quick Search Notification Experiment (#742)
* added notification query to BrowserActivity

* making notification silent

* adding new prompt notification

* adding a new close button for all notification specs

* adding new search notification as silent

* we want to update the notification instead of adding a new one

* adding buttons to the search prompt

* changing notification channel so it moves from the status bar to silent notifications

* adjusting notification background

* added item to settings activity

* enabling / disabling the notification from settings screen

* no need to start the test notification here

* moving to default priority, using the new interstitial search

* notification should not appear in the lock screen

* fixed failing tests

* search notification toggle should only be visible if experiment is enabled

* added tests for viewModel

* proper design for the search prompt notification

* improved padding in the notification

* updated strings

* remove Show from strings

* updated action buttons text for notification

* updated pixel names for the feature

* added new pixels and improved ui of initial notification

* better padding

* updated background and padding for both notifications

* using proper text title style for sticky notification

* added missing tests for notification scheduler

* added comments on VariantManager

* updated variants to latest definition

* cleaning up the notification layout now that we don't need text

* Revert "cleaning up the notification layout now that we don't need text"

This reverts commit b9fcfdd05786fd18d4ece5860aa7ab4e810e7dbe.

* cleaning up the layouts here

* ensure we don't schedule or show the notification setting if the variant is not enabled

* proper notification variant keys

* good thing we had a test for this!

* typo in test names

* no need to extend the open class when it's only done once

* previous ex

--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -57,6 +57,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/autocompleteToggle" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/searchNotificationToggle"
+        style="@style/SettingsSwitch"
+        android:text="@string/stickySearchNotificationText"
+        android:theme="@style/SettingsSwitchTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setAsDefaultBrowserSetting" />
+
     <TextView
         android:id="@+id/changeAppIconLabel"
         style="@style/SettingsItemClickable"
