Feature/marcos/update broken site feedback process (#741)

--- a/app/src/main/res/layout/activity_broken_site.xml
+++ b/app/src/main/res/layout/activity_broken_site.xml
@@ -14,149 +14,15 @@
   ~ limitations under the License.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_height="match_parent"
     tools:context="com.duckduckgo.app.brokensite.BrokenSiteActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <include layout="@layout/include_toolbar" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/feedbackCardHorizontalMargin"
-            android:layout_marginTop="@dimen/feedbackCardVerticalMargin"
-            android:layout_marginEnd="@dimen/feedbackCardHorizontalMargin"
-            android:layout_marginBottom="@dimen/feedbackCardVerticalMargin"
-            android:background="@drawable/notification_info_bottom_background"
-            android:paddingBottom="30dp">
+    <include layout="@layout/content_broken_sites" />
 
-            <View
-                android:id="@+id/titleSection"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@drawable/notification_info_top_background"
-                android:elevation="4dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="@+id/description"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginTop="30dp"
-                android:elevation="@dimen/modalCardHeaderElevation"
-                android:importantForAccessibility="no"
-                android:src="@drawable/ic_icon_report_broken_site"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/titleSection" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:elevation="@dimen/modalCardHeaderElevation"
-                android:text="@string/brokenSiteHeading"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/modalCardTitleTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/icon" />
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="19dp"
-                android:elevation="@dimen/modalCardHeaderElevation"
-                android:lineSpacingExtra="4sp"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:paddingBottom="30dp"
-                android:text="@string/brokenSiteModalDescription"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/modalCardDescriptionTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title" />
-
-            <TextView
-                android:id="@+id/brokenDomainLabel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/feedbackFormFieldsMargin"
-                android:text="@string/brokenSiteDomainLabel"
-                android:textColor="@color/warmerGray"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/description" />
-
-            <EditText
-                android:id="@+id/brokenSiteUrl"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/feedbackFormFieldsMargin"
-                android:hint="@string/brokenSiteUrlHint"
-                android:imeOptions="flagNoExtractUi"
-                android:inputType="textUri"
-                android:paddingTop="8dp"
-                android:paddingBottom="16dp"
-                android:singleLine="true"
-                android:textSize="@dimen/modalCardEditTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/brokenDomainLabel" />
-
-            <EditText
-                android:id="@+id/feedbackMessage"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/feedbackFormFieldsMargin"
-                android:hint="@string/brokenSiteMessageHint"
-                android:imeOptions="flagNoExtractUi"
-                android:inputType="textMultiLine"
-                android:lineSpacingExtra="5sp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:textSize="@dimen/modalCardEditTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/brokenSiteUrl" />
-
-            <Button
-                android:id="@+id/submitButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/button_contained_bg"
-                android:text="@string/brokenSiteSubmitButton"
-                android:textColor="@color/white"
-                android:textSize="@dimen/modalCardMajorButtonTextSize"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/feedbackMessage" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
-</ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
