--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -325,6 +325,14 @@
         <item name="android:layout_marginTop">9dp</item>
     </style>
 
+    <style name="BrokenSitesButton" parent="@style/Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/broken_sites_button_background</item>
+        <item name="android:textColor">@color/broken_sites_button_text</item>
+        <item name="rippleColor">?attr/daxDialogSecondaryButtonRippleColor</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0.0</item>
+    </style>
+
     <style name="DaxDialogButton" parent="@style/Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:textAllCaps">false</item>
         <item name="cornerRadius">20dp</item>
