--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -51,5 +51,10 @@
     <attr name="daxDialogBackgroundColor" format="color" />
     <attr name="daxDialogSecondaryButtonTextColor" format="color" />
     <attr name="daxDialogSecondaryButtonRippleColor" format="color" />
+    <attr name="brokenSiteSelectionTextColor" format="color" />
+    <attr name="brokenSiteOutlinedColor" format="color" />
+    <attr name="brokenSitesButtonDisabledBackgroundColor" format="color" />
+    <attr name="brokenSitesButtonDisabledTextColor" format="color" />
+    <attr name="brokenSitesButtonRippleColor" format="color" />
 
 </resources>
