--- a/app/src/main/res/layout/layout_bottom_navigation_bar_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_bar_view.xml
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<com.duckduckgo.app.browser.BottomNavigationBar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.duckduckgo.app.browser.ui.BottomNavigationBar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -66,4 +66,4 @@
         android:src="@drawable/ic_bookmarks_black_24dp"
         android:background="?selectableItemBackground"/>
 
-</com.duckduckgo.app.browser.BottomNavigationBar>
+</com.duckduckgo.app.browser.ui.BottomNavigationBar>
